# claworc

./: .codacy.yaml  .env.development  .gitignore  CLAUDE.md  Makefile  Procfile  README.md  docker-compose.yml  install.ps1  install.sh  models.csv  reset-password.sh  test-all.sh  uninstall.sh
agent/: Dockerfile  Dockerfile.browser-base  Dockerfile.chromium  README.md  autostart  browser.json  build-and-push.sh  default.conf
control-plane/: .air.toml  .dockerignore  Dockerfile  Procfile.dev  go.mod  go.sum  key_rotation_job_test.go  main.go  reconcile.go
dashboard/: .dockerignore  Dockerfile  pyproject.toml
dashboard/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/frontend/src/: App.tsx  main.tsx
dashboard/frontend/src/api/: client.ts  instances.ts  settings.ts
dashboard/frontend/src/components/: ActionButtons.tsx  ApiKeySettings.tsx  InstanceForm.tsx  InstanceRow.tsx  InstanceTable.tsx  Layout.tsx  StatusBadge.tsx
dashboard/frontend/src/hooks/: useInstances.ts  useSettings.ts
dashboard/frontend/src/pages/: CreateInstancePage.tsx  DashboardPage.tsx  InstanceDetailPage.tsx  SettingsPage.tsx
dashboard/frontend/src/types/: instance.ts  settings.ts
docs/: CNAME  README.md  api.md  architecture.md  auth.md  connections.md  data-model.md  development.md  docker.md  features.md  getting-started.md  install.md  integration-test-backend.md  internal-proxy.md  kanban.md  llm-catalog.md  llm-proxy.md  ondemand-browser.md  openclaw-providers.md  security-test-results.md  shared-folders.md  ssh-connectivity.md  style-guide.md  (+7 more)
(+772 files in other folders)
